# sdl-opengl

./: CMakeLists.txt  README.md  main.cpp
includes/: Caisse.h  Camera.h  Cube.h  Input.h  SceneOpenGL.h  Shader.h  Texture.h
shaders/: basique.frag  basique2D.frag  basique2D.vert  basique_2D.vert  couleur3D.frag  couleur3D.vert  texture.frag  texture.vert
sources/: Caisse.cpp  Camera.cpp  Cube.cpp  Input.cpp  SceneOpenGL.cpp  Shader.cpp  Texture.cpp
